Fix pattern player dropdown overflow

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -97,3 +97,7 @@
 		}
 	}
 }
+
+body > .dropdown-menu {
+	z-index: 10000;
+}
